--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,38 +1,25 @@
 [build-system]
-requires = ["setuptools>=42", "wheel"]
+requires = ["setuptools>=42"]
 build-backend = "setuptools.build_meta"
+
+[project]
+name = "finance_assistant"
+version = "0.1.0"
+description = "Finance Assistant Application"
+authors = [
+    {name = "Your Name", email = "your.email@example.com"},
+]
+dependencies = [
+    "requests>=2.28.1",
+    "pandas>=1.5.2",
+    "fastapi>=0.85.0",
+    "uvicorn>=0.19.0",
+]
 
 [tool.black]
 line-length = 120
-target-version = ["py310"]
-include = '\.pyi?$'
-exclude = '''
-/(
-    \.git
-  | \.venv
-  | build
-  | dist
-  | migrations
-)/
-'''
+target-version = ['py38']
 
 [tool.isort]
 profile = "black"
 line_length = 120
-known_first_party = ["myapp"]
-multi_line_output = 3
-include_trailing_comma = true
-force_grid_wrap = 0
-use_parentheses = true
-
-[tool.mypy]
-python_version = "3.10"
-warn_return_any = true
-warn_unused_configs = true
-disallow_untyped_defs = true
-check_untyped_defs = true
-no_implicit_optional = true
-warn_redundant_casts = true
-warn_unused_ignores = true
-warn_no_return = true
-strict_equality = true
